- add wolfSSL support to refactored sqlcipher - add patch generation script

--- a/Makefile.in
+++ b/Makefile.in
@@ -149,6 +149,7 @@ CRYPTOLIBOBJ = \
   crypto_openssl.lo \
   crypto_libtomcrypt.lo \
   crypto_nss.lo \
+  crypto_wolfssl.lo \
   crypto_cc.lo
 
 CRYPTOSRC = \
@@ -157,6 +158,7 @@ CRYPTOSRC = \
 	$(TOP)/src/crypto_libtomcrypt.c \
 	$(TOP)/src/crypto_nss.c \
 	$(TOP)/src/crypto_openssl.c \
+	$(TOP)/src/crypto_wolfssl.c \
 	$(TOP)/src/crypto_cc.c
 
 # END CRYPTO
@@ -900,6 +902,8 @@ crypto_libtomcrypt.lo:	$(TOP)/src/crypto_libtomcrypt.c $(HDR)
 	$(LTCOMPILE) -c $(TOP)/src/crypto_libtomcrypt.c
 crypto_cc.lo:	$(TOP)/src/crypto_cc.c $(HDR)
 	$(LTCOMPILE) -c $(TOP)/src/crypto_cc.c
+crypto_wolfssl.lo:  $(TOP)/src/crypto_wolfssl.c $(HDR)
+	$(LTCOMPILE) -c $(TOP)/src/crypto_wolfssl.c
 # END CRYPTO
 
 # Rules to build individual *.o files from files in the src directory.
